--- a/server/src/main/resources/ServerView.fxml
+++ b/server/src/main/resources/ServerView.fxml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.dep11.ServerViewController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="621.0" prefWidth="830.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep11.ServerViewController">
+   <children>
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="112.0" layoutY="34.0" prefHeight="69.0" prefWidth="674.0" text="Server App">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <TableView fx:id="tblServer" layoutX="69.0" layoutY="146.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
+        <columns>
+          <TableColumn prefWidth="141.0" text="Id" />
+          <TableColumn prefWidth="363.0" text="Food Item" />
+            <TableColumn prefWidth="305.0" text="Quantity" />
+        </columns>
+      </TableView>
+      <Button fx:id="btnProcess" layoutX="61.0" layoutY="403.0" mnemonicParsing="false" onAction="#btnProcessOnAction" prefHeight="51.0" prefWidth="199.0" text="Process">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="btnComplete" layoutX="415.0" layoutY="403.0" mnemonicParsing="false" onAction="#btnCompleteOnAction" prefHeight="51.0" prefWidth="199.0" text="Complete">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
